--- a/.prod.env
+++ b/.prod.env
@@ -14,3 +14,4 @@ MAIL_USERNAME=111423059@cc.ncu.edu.tw
 MAIL_PASSWORD=gAAAAABleb0Kl6Dkis6sAIRUA5nhPhrjW6f9D-SVGIvOwucSeEh1-Wep0dq_lNymqf6z5GVbRXSECjHz7YOzfyfkUcZDEMJD5A==
 PRIVATE_KEY=nwjZWj8-pjJ4bn3gebESwb2okum57VvzMBia5KwMaVA=
 RECEIVE_MAIL_USERNAME=112423001@cc.ncu.edu.tw
+WTF_CSRF_ENABLED=True
