--- a/.test.env
+++ b/.test.env
@@ -14,3 +14,4 @@ MAIL_USERNAME=1088cbfa5e079a
 MAIL_PASSWORD=7eec35e4f24bbd
 PRIVATE_KEY=nwjZWj8-pjJ4bn3gebESwb2okum57VvzMBia5KwMaVA=
 RECEIVE_MAIL_USERNAME=112423001@cc.ncu.edu.tw
+WTF_CSRF_ENABLED=False
